--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <base href="/">
     <title>MovieLens海外电影推荐系统</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon config" type="image/x-icon" href="favicon.ico">
 
   </head>
 
